# dstack-mining-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PORTS.md  README.md  USAGE.md  docker-compose.yaml  docker-compose.yml  run.sh  test.sh
.github/workflows/: build_then_release.yml
src/: main.rs
tests/: integration_test.rs  unit_test.rs
