[package]
name = "dstack-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dstack-backend"
path = "src/main.rs"

[[bin]]
name = "whitelist-service"
path = "src/bin/whitelist_service.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nostr-sdk = "0.37"
local-ip-address = "0.6"

[dev-dependencies]
tempfile = "3.8"
