[package]
name = "dstack-backend"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "dstack-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
hyperlocal = "0.9"
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nostr-sdk = "0.37"
local-ip-address = "0.6"
enum-tools = "0.5.5"
alloy = { version = "1.0.41", default-features = false, features = ["essentials", "std", "provider-ws"] }

[dev-dependencies]
tempfile = "3.8"
